--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,7 +5,7 @@ ja:
       Today: 今日の
       Tomorrow: 明日の
     footer:
-      author: 作成者
+      developer: 作成者
       github: GitHub
   weather:
     show:
