--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,6 +16,27 @@ ja:
       weather_image: 天気画像
       celsius_max: 最高気温
       celsius_min: 最低気温
+      Sapporo: 札幌
+      Tokyo: 東京
+      Nagoya: 名古屋
+      Osaka: 大阪
+      Kitakyushu: 北九州
+      Tosu: 鳥栖
+      Naha: 那覇
+      Thunderstorm: 雷雨
+      Drizzle: 霧雨
+      Rain: 雨
+      Snow: 雪
+      Mist: 霧
+      Smoke: 霧
+      Haze: 靄
+      Fog: 濃霧
+      Sand: 砂埃
+      Ash: 灰
+      Squall: スコール
+      Tornado: 竜巻
+      Clear: 晴れ
+      Clouds: 曇り
   activerecord:
     attributes:
       city:
